--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_take_course"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_take_course"
+        android:visible="false"
         app:showAsAction="never" />
 </menu>
