--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="strong_blue">#4286f4</color>
+    <color name="medium_gray">#b9b9b9</color>
+    <color name="medium_dark_gray">#808080</color>
 </resources>
